@@ -1,3 +1,8 @@
+Fri Oct 24 16:08:17 2008  Søren Sandmann  <sandmann@redhat.com>
+
+	* gnome-wm-manager.c (gnome_wm_manager_init): Use glib path
+	builders instead of the ones in libgnome.
+
 2008-10-06  Matthias Clasen  <mclasen@redhat.com>
 
 	Bug 554962 – maixmize horizontally/vertically doesn't work with
